add hoshiboshi image (not working)

--- a/imx-5.4.70-2.3.0/meta-hoshiboshi/conf/layer.conf
+++ b/imx-5.4.70-2.3.0/meta-hoshiboshi/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-mylayer"
-BBFILE_PATTERN_meta-mylayer = "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-mylayer = "6"
+BBFILE_COLLECTIONS += "meta-hoshiboshi"
+BBFILE_PATTERN_meta-hoshiboshi = "^${LAYERDIR}/"
+BBFILE_PRIORITY_meta-hoshiboshi = "6"
 
-LAYERDEPENDS_meta-mylayer = "core"
-LAYERSERIES_COMPAT_meta-mylayer = "warrior zeus"
+LAYERDEPENDS_meta-hoshiboshi = "core"
+LAYERSERIES_COMPAT_meta-hoshiboshi = "warrior zeus"
