--- a/meta-hoshiboshi/conf/layer.conf
+++ b/meta-hoshiboshi/conf/layer.conf
@@ -10,4 +10,5 @@ BBFILE_PATTERN_meta-hoshiboshi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-hoshiboshi = "6"
 
 LAYERDEPENDS_meta-hoshiboshi = "core"
-LAYERSERIES_COMPAT_meta-hoshiboshi = "warrior zeus"
+LAYERSERIES_COMPAT_meta-hoshiboshi = "warrior zeus hardknott"
+UBOOT_CONFIG = "sd fspi emmc"
