working dev and prod build

--- a/meta-hoshiboshi/conf/layer.conf
+++ b/meta-hoshiboshi/conf/layer.conf
@@ -11,4 +11,4 @@ BBFILE_PRIORITY_meta-hoshiboshi = "6"
 
 LAYERDEPENDS_meta-hoshiboshi = "core"
 LAYERSERIES_COMPAT_meta-hoshiboshi = "warrior zeus hardknott"
-UBOOT_CONFIG = "sd fspi emmc"
+UBOOT_CONFIG = "sd emmc"
