--- a/Dockerfile-Ubuntu-20.04
+++ b/Dockerfile-Ubuntu-20.04
@@ -5,8 +5,7 @@ FROM ubuntu:20.04
 # for a default confirmation [Y/n] at some configurations.
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt update
-RUN apt install -y gawk wget git-core diffstat unzip texinfo \
+RUN apt-get update && apt-get install -y gawk wget git-core diffstat unzip texinfo \
     gcc-multilib build-essential chrpath socat cpio python python3 \
     python3-pip python3-pexpect xz-utils debianutils iputils-ping \
     libsdl1.2-dev xterm tar locales net-tools rsync sudo vim curl
