--- a/Dockerfile-Ubuntu-20.04
+++ b/Dockerfile-Ubuntu-20.04
@@ -1,15 +1,41 @@
 FROM ubuntu:20.04
 
+# Dockerfile-Ubuntu-20.04
 # Update system and add the packages required for Yocto builds.
 # Use DEBIAN_FRONTEND=noninteractive, to avoid image build hang waiting
 # for a default confirmation [Y/n] at some configurations.
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y gawk wget git-core diffstat unzip texinfo \
-    gcc-multilib build-essential chrpath socat cpio python python3 \
-    python3-pip python3-pexpect xz-utils debianutils iputils-ping \
-    libsdl1.2-dev xterm tar locales net-tools rsync sudo vim curl \
-    liblz4-tool zstd
+RUN apt-get update && apt-get install -y \ 
+build-essential=12.8ubuntu1.1 \
+chrpath=0.16-2 \
+cpio=2.13+dfsg-2ubuntu0.3 \
+curl=7.68.0-1ubuntu2.11 \
+debianutils=4.9.1 \
+diffstat=1.63-1 \
+gawk=1:5.0.1+dfsg-1 \
+gcc-multilib=4:9.3.0-1ubuntu2 \
+git-core \
+iputils-ping=3:20190709-3 \
+liblz4-tool=1.9.2-2ubuntu0.20.04.1 \
+libsdl1.2-dev=1.2.15+dfsg2-5 \
+locales=2.31-0ubuntu9.9 \
+net-tools=1.60+git20180626.aebd88e-1ubuntu1 \
+python \
+python3=3.8.2-0ubuntu2 \
+python3-pexpect=4.6.0-1build1 \
+python3-pip=20.0.2-5ubuntu1.6 \
+rsync=3.1.3-8ubuntu0.3 \
+socat=1.7.3.3-2 \
+sudo=1.8.31-1ubuntu1.2 \
+tar=1.30+dfsg-7ubuntu0.20.04.2 \
+texinfo=6.7.0.dfsg.2-5 \
+unzip=6.0-25ubuntu1 \
+vim=2:8.1.2269-1ubuntu5.7 \
+wget=1.20.3-1ubuntu2 \
+xterm=353-1ubuntu1.20.04.2 \
+xz-utils=5.2.4-1ubuntu1.1 \
+zstd=1.4.4+dfsg-3ubuntu0.1 
 
 # Set up locales
 RUN locale-gen en_US.UTF-8 && \
@@ -24,6 +50,13 @@ RUN rm /bin/sh && ln -s bash /bin/sh
 # Install repo
 ADD https://storage.googleapis.com/git-repo-downloads/repo /usr/local/bin/
 RUN chmod 755 /usr/local/bin/repo
+
+# Check arguments
+RUN \
+if [[ -z "${USER}" ]] ; then echo Error. USER argument not provided ; fi; \
+if [[ -z "${host_gid}" ]] ; then echo Error. host_gid argument not provided ; fi; \
+if [[ -z "${host_uid}" ]] ; then echo Error. host_uid argument not provided ; fi; \
+if [[ -z "${DOCKER_WORKDIR}" ]] ; then echo Error. DOCKER_WORKDIR argument not provided ; fi;
 
 # Add your user to sudoers to be able to install other packages in the container.
 ARG USER
@@ -41,4 +74,5 @@ RUN groupadd -g $host_gid nxp && \
 USER $USER
 
 ARG DOCKER_WORKDIR
+
 WORKDIR ${DOCKER_WORKDIR}
